[package]
name = "rust-argon2-wasm"
version = "1.0.0"
authors = ["Martijn Rijkeboer <mrr@sru-systems.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust implementation of the Argon2 password hashing function."
documentation = "https://docs.sru-systems.com/rust-argon2/1.0.0/argon2/"
homepage = "https://github.com/sru-systems/rust-argon2"
repository = "https://github.com/sru-systems/rust-argon2"
readme = "README.md"
keywords = ["argon2", "argon2d", "argon2i", "hash", "password"]

rust-argon2-wasm = { version = "1.0.0", default-features = false }

[lib]
name = "rust_argon2_wasm"
crate-type =["cdylib"]

[features]
default = ["crossbeam-utils"]

[dependencies]
web-sys = { version = "0.3.59", features = ["console"]}
console_error_panic_hook = "0.1.7"
serde_json = "1.0"
wasm-bindgen = {version="0.2.82", features = ["serde-serialize"]}
base64 = "0.13"
blake2b_simd = "1.0"
constant_time_eq = "0.1.5"
crossbeam-utils = { version = "0.8", optional = true }
serde = { version = "1.0.133", features=["derive"] }

[dev-dependencies]
hex = "0.4"
